@@ -208,5 +208,9 @@ Sie können Statusklassen für zusätzlich von ihnen definierte Statusmeldungen 
         <source>On loss of connection to the server</source>
         <translation>Wenn die Verbindung zum Server verloren geht</translation>
     </message>
+    <message>
+        <source>Left Vacuum-IM</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 </TS>
